Fixed message order test cases