@@ -5,6 +5,7 @@ import static org.junit.jupiter.api.Assertions.*;
 import com.ragchat.chat.config.ChatServicePostgresTestConfig;
 import com.ragchat.chat.model.dto.request.CreateMessageRequest;
 import com.ragchat.chat.model.dto.response.MessageResponse;
+import com.ragchat.chat.model.dto.response.PageResponse;
 import com.ragchat.chat.model.entity.ChatMessage;
 import com.ragchat.chat.model.entity.ChatSession;
 import com.ragchat.chat.model.enums.MessageSender;
@@ -12,6 +13,8 @@ import com.ragchat.chat.repository.ChatMessageRepository;
 import com.ragchat.chat.repository.ChatSessionRepository;
 import java.util.List;
 import java.util.UUID;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -40,6 +43,18 @@ class MessageServiceIT {
     @Autowired
     private ChatMessageRepository chatMessageRepository;
 
+    @BeforeEach
+    void setUp() {
+        chatSessionRepository.deleteAll();
+        chatMessageRepository.deleteAll();
+    }
+
+    @AfterEach
+    void tearDown() {
+        chatSessionRepository.deleteAll();
+        chatMessageRepository.deleteAll();
+    }
+
     @Test
     void createMessage_persistsAndReturnsResponse() {
         UUID userId = UUID.randomUUID();
@@ -61,12 +76,11 @@ class MessageServiceIT {
         assertEquals(1, response.messageOrder());
 
         List<ChatMessage> stored = chatMessageRepository.findBySessionOrderByMessageOrderAsc(session);
-        assertEquals(1, stored.size());
-        assertEquals("Hello from IT", stored.get(0).getContent());
+        assertEquals("Hello from IT", stored.getFirst().getContent());
     }
 
     @Test
-    void getMessages_returnsMessagesInOrder() {
+    void getMessages_returnsMessagesInOrder() throws InterruptedException {
         UUID userId = UUID.randomUUID();
         ChatSession session = ChatSession.builder()
                 .userId(userId)
@@ -78,15 +92,20 @@ class MessageServiceIT {
 
         messageService.createMessage(
                 userId, session.getId(), new CreateMessageRequest(MessageSender.USER, "First", null));
+        Thread.sleep(1000);
         messageService.createMessage(
                 userId, session.getId(), new CreateMessageRequest(MessageSender.USER, "Second", null));
 
-        List<MessageResponse> responses = messageService.getMessages(userId, session.getId());
+        PageResponse<MessageResponse> responses = messageService.getMessagesPage(userId, session.getId(), 0, 10);
 
-        assertEquals(2, responses.size());
-        assertEquals("First", responses.get(0).content());
-        assertEquals(1, responses.get(0).messageOrder());
-        assertEquals("Second", responses.get(1).content());
-        assertEquals(2, responses.get(1).messageOrder());
+        assertEquals(4, responses.content().size());
+        assertEquals("Failed to generate response", responses.content().get(0).content());
+        assertEquals(4, responses.content().get(0).messageOrder());
+        assertEquals("Second", responses.content().get(1).content());
+        assertEquals(3, responses.content().get(1).messageOrder());
+        assertEquals("Failed to generate response", responses.content().get(2).content());
+        assertEquals(2, responses.content().get(2).messageOrder());
+        assertEquals("First", responses.content().get(3).content());
+        assertEquals(1, responses.content().get(3).messageOrder());
     }
 }
